// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Provider rows ocpv-1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-7"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="True"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-7"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                True
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://my_OCPv_url
        </td>
        <td
          class=""
          data-label="Type"
        >
          KubeVirt 
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              target
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          26
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           8
        </td>
        <td
          class=""
          data-label="Clusters"
        />
        <td
          class=""
          data-label="Hosts"
        />
        <td
          class=""
          data-label="Storage"
        />
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-7"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-13"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows ocpv-2 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-8"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-2, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="Unknown"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-8"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#6a6e73"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                Unknown
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://my_OCPv_url
        </td>
        <td
          class=""
          data-label="Type"
        >
          KubeVirt 
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              target
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          26
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           8
        </td>
        <td
          class=""
          data-label="Clusters"
        />
        <td
          class=""
          data-label="Hosts"
        />
        <td
          class=""
          data-label="Storage"
        />
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-8"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-15"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows ocpv-3 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-9"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: ocpv-3, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
           
          <span
            class="pf-c-label pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              default
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="True"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-9"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                True
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        />
        <td
          class=""
          data-label="Type"
        >
          KubeVirt 
          <span
            class="pf-c-label pf-m-blue pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              target
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          26
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           8
        </td>
        <td
          class=""
          data-label="Clusters"
        />
        <td
          class=""
          data-label="Hosts"
        />
        <td
          class=""
          data-label="Storage"
        />
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-9"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-17"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows rhv-1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-4"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: rhv-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: konveyor-forklift
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: konveyor-forklift, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="True"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-4"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                True
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://rhvm.v2v.bos.redhat.com/ovirt-engine/api
        </td>
        <td
          class=""
          data-label="Type"
        >
          oVirt 
          <span
            class="pf-c-label pf-m-green pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              source
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          36
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           15
        </td>
        <td
          class=""
          data-label="Clusters"
        >
          2
        </td>
        <td
          class=""
          data-label="Hosts"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M567.403 235.642L462.323 84.589A48 48 0 0 0 422.919 64H153.081a48 48 0 0 0-39.404 20.589L8.597 235.642A48.001 48.001 0 0 0 0 263.054V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V263.054c0-9.801-3-19.366-8.597-27.412zM153.081 112h269.838l77.913 112H75.168l77.913-112zM528 400H48V272h480v128zm-32-64c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32zm-96 0c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32z"
            />
          </svg>
           4
        </td>
        <td
          class=""
          data-label="Storage"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
            />
          </svg>
           9
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-4"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-7"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows rhv-2 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-5"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: rhv-2, gvk: forklift.konveyor.io~v1beta1~Provider, ns: konveyor-forklift
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: konveyor-forklift, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="True"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-5"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                True
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://rhvm.v2v.bos.redhat.com/ovirt-engine/api
        </td>
        <td
          class=""
          data-label="Type"
        >
          oVirt 
          <span
            class="pf-c-label pf-m-green pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              source
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          36
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           15
        </td>
        <td
          class=""
          data-label="Clusters"
        >
          2
        </td>
        <td
          class=""
          data-label="Hosts"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M567.403 235.642L462.323 84.589A48 48 0 0 0 422.919 64H153.081a48 48 0 0 0-39.404 20.589L8.597 235.642A48.001 48.001 0 0 0 0 263.054V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V263.054c0-9.801-3-19.366-8.597-27.412zM153.081 112h269.838l77.913 112H75.168l77.913-112zM528 400H48V272h480v128zm-32-64c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32zm-96 0c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32z"
            />
          </svg>
           4
        </td>
        <td
          class=""
          data-label="Storage"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
            />
          </svg>
           9
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-5"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-9"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows rhv-3 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-6"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: rhv-3, gvk: forklift.konveyor.io~v1beta1~Provider, ns: konveyor-forklift
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: konveyor-forklift, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="True"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-6"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                True
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://rhvm.v2v.bos.redhat.com/ovirt-engine/api
        </td>
        <td
          class=""
          data-label="Type"
        >
          oVirt 
          <span
            class="pf-c-label pf-m-green pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              source
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          36
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           15
        </td>
        <td
          class=""
          data-label="Clusters"
        >
          2
        </td>
        <td
          class=""
          data-label="Hosts"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M567.403 235.642L462.323 84.589A48 48 0 0 0 422.919 64H153.081a48 48 0 0 0-39.404 20.589L8.597 235.642A48.001 48.001 0 0 0 0 263.054V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V263.054c0-9.801-3-19.366-8.597-27.412zM153.081 112h269.838l77.913 112H75.168l77.913-112zM528 400H48V272h480v128zm-32-64c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32zm-96 0c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32z"
            />
          </svg>
           4
        </td>
        <td
          class=""
          data-label="Storage"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
            />
          </svg>
           9
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-6"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-11"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows vcenter-1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-1"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-1, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="True"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#3e8635"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                True
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://vcenter.v2v.bos.redhat.com/sdk
        </td>
        <td
          class=""
          data-label="Type"
        >
          VMware 
          <span
            class="pf-c-label pf-m-green pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              source
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          41
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           8
        </td>
        <td
          class=""
          data-label="Clusters"
        >
          2
        </td>
        <td
          class=""
          data-label="Hosts"
        >
          <a
            href="/mtv/providers/vsphere/vcenter-1"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align: -0.125em;"
              viewBox="0 0 576 512"
              width="1em"
            >
              <path
                d="M567.403 235.642L462.323 84.589A48 48 0 0 0 422.919 64H153.081a48 48 0 0 0-39.404 20.589L8.597 235.642A48.001 48.001 0 0 0 0 263.054V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V263.054c0-9.801-3-19.366-8.597-27.412zM153.081 112h269.838l77.913 112H75.168l77.913-112zM528 400H48V272h480v128zm-32-64c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32zm-96 0c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32z"
              />
            </svg>
             2
          </a>
        </td>
        <td
          class=""
          data-label="Storage"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
            />
          </svg>
           3
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-1"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-1"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows vcenter-2 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-2"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-2, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="Unknown"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#6a6e73"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                Unknown
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://vcenter.v2v.bos.redhat.com/sdk
        </td>
        <td
          class=""
          data-label="Type"
        >
          VMware 
          <span
            class="pf-c-label pf-m-green pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              source
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          41
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           8
        </td>
        <td
          class=""
          data-label="Clusters"
        >
          2
        </td>
        <td
          class=""
          data-label="Hosts"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M567.403 235.642L462.323 84.589A48 48 0 0 0 422.919 64H153.081a48 48 0 0 0-39.404 20.589L8.597 235.642A48.001 48.001 0 0 0 0 263.054V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V263.054c0-9.801-3-19.366-8.597-27.412zM153.081 112h269.838l77.913 112H75.168l77.913-112zM528 400H48V272h480v128zm-32-64c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32zm-96 0c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32z"
            />
          </svg>
           2
        </td>
        <td
          class=""
          data-label="Storage"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
            />
          </svg>
           3
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-2"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-3"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`Provider rows vcenter-3 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class=""
        data-ouia-component-id="OUIA-Generated-TableRow-3"
        data-ouia-component-type="PF4/TableRow"
        data-ouia-safe="true"
      >
        <td
          class=""
          data-label="Name"
        >
          <div
            class="ResourceLink_mock"
          >
            name: vcenter-3, gvk: forklift.konveyor.io~v1beta1~Provider, ns: openshift-migration
          </div>
           
        </td>
        <td
          class=""
          data-label="Namespace"
        >
          <div
            class="ResourceLink_mock"
          >
            name: openshift-migration, gvk: ~~, ns: undefined
          </div>
        </td>
        <td
          class=""
          data-label="Ready"
        >
          <button
            aria-disabled="false"
            aria-label="Unknown"
            class="pf-c-button pf-m-link pf-m-inline"
            data-ouia-component-id="OUIA-Generated-Button-link-3"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <div
              class="pf-l-flex pf-m-space-items-sm pf-m-align-items-center pf-m-nowrap"
              style="white-space: nowrap;"
            >
              <div
                class=""
              >
                <svg
                  aria-hidden="true"
                  class=""
                  fill="#6a6e73"
                  height="1em"
                  role="img"
                  style="vertical-align: -0.125em;"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"
                  />
                </svg>
              </div>
              <div
                class=""
              >
                Unknown
              </div>
            </div>
          </button>
        </td>
        <td
          class=""
          data-label="Endpoint"
        >
          https://vcenter.v2v.bos.redhat.com/sdk
        </td>
        <td
          class=""
          data-label="Type"
        >
          VMware 
          <span
            class="pf-c-label pf-m-green pf-m-compact"
          >
            <span
              class="pf-c-label__content"
            >
              source
            </span>
          </span>
        </td>
        <td
          class=""
          data-label="VMs"
        >
          41
        </td>
        <td
          class=""
          data-label="Networks"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 1088 1024"
            width="1em"
          >
            <path
              d="M574,320 L574,448 L896,448 C931.332514,448.033078 959.966922,476.667486 960,512 L960,512 L960,640 L1024,640 C1059.33251,640.033078 1087.96692,668.667486 1088,704 L1088,704 L1088,896 C1087.96692,931.332514 1059.33251,959.966922 1024,960 L1024,960 L832,960 C796.667486,959.966922 768.033078,931.332514 768,896 L768,896 L768,704 C768.033078,668.667486 796.667486,640.033078 832,640 L832,640 L896,640 L896,512 L574,512 L574,640 L639,640 C674.332514,640.033078 702.966922,668.667486 703,704 L703,704 L703,896 C702.966922,931.332514 674.332514,959.966922 639,960 L639,960 L447,960 C411.667486,959.966922 383.033078,931.332514 383,896 L383,896 L383,704 C383.033078,668.667486 411.667486,640.033078 447,640 L447,640 L510,640 L510,512 L192,512 L192,640 L256,640 C291.332514,640.033078 319.966922,668.667486 320,704 L320,704 L320,896 C319.966922,931.332514 291.332514,959.966922 256,960 L256,960 L64,960 C28.6674863,959.966922 0.0330777378,931.332514 0,896 L0,896 L0,704 C0.0330777378,668.667486 28.6674863,640.033078 64,640 L64,640 L128,640 L128,512 C128.033078,476.667486 156.667486,448.033078 192,448 L192,448 L510,448 L510,320 L574,320 Z M1024,64 L1024,256 L64,256 L64,64 L1024,64 Z M704,192 L960.5,192 L960.5,128 L704,128 L704,192 Z"
            />
          </svg>
           8
        </td>
        <td
          class=""
          data-label="Clusters"
        >
          2
        </td>
        <td
          class=""
          data-label="Hosts"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 576 512"
            width="1em"
          >
            <path
              d="M567.403 235.642L462.323 84.589A48 48 0 0 0 422.919 64H153.081a48 48 0 0 0-39.404 20.589L8.597 235.642A48.001 48.001 0 0 0 0 263.054V400c0 26.51 21.49 48 48 48h480c26.51 0 48-21.49 48-48V263.054c0-9.801-3-19.366-8.597-27.412zM153.081 112h269.838l77.913 112H75.168l77.913-112zM528 400H48V272h480v128zm-32-64c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32zm-96 0c0 17.673-14.327 32-32 32s-32-14.327-32-32 14.327-32 32-32 32 14.327 32 32z"
            />
          </svg>
           2
        </td>
        <td
          class=""
          data-label="Storage"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align: -0.125em;"
            viewBox="0 0 448 512"
            width="1em"
          >
            <path
              d="M448 73.143v45.714C448 159.143 347.667 192 224 192S0 159.143 0 118.857V73.143C0 32.857 100.333 0 224 0s224 32.857 224 73.143zM448 176v102.857C448 319.143 347.667 352 224 352S0 319.143 0 278.857V176c48.125 33.143 136.208 48.572 224 48.572S399.874 209.143 448 176zm0 160v102.857C448 479.143 347.667 512 224 512S0 479.143 0 438.857V336c48.125 33.143 136.208 48.572 224 48.572S399.874 369.143 448 336z"
            />
          </svg>
           3
        </td>
        <td
          class=""
          data-label=""
        >
          <div
            class="pf-c-dropdown pf-m-align-right"
            data-ouia-component-id="OUIA-Generated-Dropdown-3"
            data-ouia-component-type="PF4/Dropdown"
            data-ouia-safe="true"
          >
            <button
              aria-expanded="false"
              aria-haspopup="false"
              aria-label="Actions"
              class="pf-c-dropdown__toggle pf-m-plain"
              id="pf-dropdown-toggle-id-5"
              type="button"
            >
              <svg
                aria-hidden="true"
                fill="currentColor"
                height="1em"
                role="img"
                style="vertical-align: -0.125em;"
                viewBox="0 0 192 512"
                width="1em"
              >
                <path
                  d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
                />
              </svg>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
